# haskell-incremental-build-template

./: .gitignore  LICENSE  README.md  flake.nix  haskell-incremental-build-template.cabal
.github/actions/find-intermediates-base/: README.md  action.yml
.github/actions/find-latest-cached-commit/: README.md  action.yml
.github/actions/nix-incremental/: action.yml  find_intermediates_base.sh
.github/workflows/: ci.yaml  find_intermediates_base.sh
nix/modules/flake/: devshell.nix  haskell.nix  template.nix
src/: Example.hs  Main.hs
